--- a/index.html
+++ b/index.html
@@ -171,9 +171,7 @@
             <form action="">
                 <input type="text" name="" placeholder="your name">
                 <input type="email" name="" placeholder="your email" id="">
-                <textarea name="" placeholder="massage" id="" cols="30" rows="10">
-            
-                </textarea>
+                <textarea name="" placeholder="massage" id="" ></textarea>
                 <input type="submit" class="btn-primary" value="Submit">
             </form>
         </div>
