--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="btn-primary">Contact</button>
             </div>
            
-            <img src="/images/hardy.png" alt="" class="banner-pic">
+            <img src="images/hardy.png" alt="" class="banner-pic">
             
 
         </div>
